--- a/web/resources/css/nonmember-style.css
+++ b/web/resources/css/nonmember-style.css
@@ -407,6 +407,24 @@ input[type=checkbox]:checked {
     .property-search-page-search-box-layout > typeahead-container > ul {
         width: 100%!important;
     }
+    .basic-search-page-search-box-layout > typeahead-container {
+        position: relative!important;
+        display: block!important;
+        top: 0!important;
+        left: 0!important;
+    }
+    .basic-search-page-search-box-layout > typeahead-container > ul {
+        width: 100%!important;
+    }
+    .advanced-search-page-search-box-layout > typeahead-container {
+        position: relative!important;
+        display: block!important;
+        top: 0!important;
+        left: 0!important;
+    }
+    .advanced-search-page-search-box-layout > typeahead-container > ul {
+        width: 100%!important;
+    }
 }
 
 /* --------------------- Tablet Device -------------------------------------  */
@@ -453,6 +471,18 @@ input[type=checkbox]:checked {
     }
     .property-search-page-search-box-layout > typeahead-container > ul > li > a{
         width: 660px!important;
+    }
+    .basic-search-page-search-box-layout > input{
+        width: 715px!important;
+    }
+    .basic-search-page-search-box-layout > typeahead-container > ul > li > a{
+          width: 715px!important;
+    }
+    .advanced-search-page-search-box-layout > input{
+        width: 715px!important;
+    }
+    .advanced-search-page-search-box-layout > typeahead-container > ul > li > a{
+          width: 715px!important;
     }
 }
 /* --------------------- Medium Device -------------------------------------  */
@@ -505,6 +535,18 @@ input[type=checkbox]:checked {
     .property-search-page-search-box-layout > typeahead-container > ul > li > a{
         width: 360px!important;
     }
+    .basic-search-page-search-box-layout > input{
+        width: 295px!important;
+    }
+    .basic-search-page-search-box-layout > typeahead-container > ul > li > a{
+         width: 295px!important;
+    }
+    .advanced-search-page-search-box-layout > input{
+        width: 295px!important;
+    }
+    .advanced-search-page-search-box-layout > typeahead-container > ul > li > a{
+         width: 295px!important;
+    }
 }
 /* --------------------- Large Device -------------------------------------  */
 @media only screen and (min-width : 1200px) {
@@ -555,6 +597,18 @@ input[type=checkbox]:checked {
     }
     .property-search-page-search-box-layout > typeahead-container > ul > li > a{
         width: 450px!important;
+    }
+    .basic-search-page-search-box-layout > input{
+        width: 360px!important;
+    }
+    .basic-search-page-search-box-layout > typeahead-container > ul > li > a{
+         width: 360px!important;
+    }
+    .advanced-search-page-search-box-layout > input{
+        width: 360px!important;
+    }
+    .advanced-search-page-search-box-layout > typeahead-container > ul > li > a{
+         width: 360px!important;
     }
 }
 /* --------------------- Login Box -------------------------------------  */
@@ -1586,4 +1640,92 @@ input[type=checkbox]:checked {
 .product-info-details-img{
     height: 350px; 
     width: 100%
+}
+/* --------------------- Basic Search Page Search Box -------------------------------------  */
+
+.basic-search-page-search-box-layout > typeahead-container > ul{
+    border-radius: 0!important;
+}
+.basic-search-page-search-box-layout > typeahead-container > ul > li > a{
+    font-family: 'effra-regular';
+    color: #484848;
+    background-image: none!important;
+    background-color: #fff!important;
+    border-top: 1px solid #00DEB6;
+}
+.basic-search-page-search-box-layout > typeahead-container > ul > li > a:hover,
+.basic-search-page-search-box-layout > typeahead-container > ul > li > a:focus,
+.basic-search-page-search-box-layout > typeahead-container > ul > li > a:visited{
+    font-family: 'effra-regular';
+    background-image: none!important;
+    background-color: #00DEB6!important;
+    color: #FFF!important;
+}
+.basic-search-page-search-box-header-text{
+    font-family: 'effra-medium';
+    color: #00deb6;
+    line-height: 1.5em;
+    font-size: 28px;
+}
+.basic-search-page-search-box-small-text{
+    font-family: 'effra-regular';
+    color: #fff;
+    line-height: 1.2em;
+    font-size: 16px;
+    font-weight: normal;
+}
+.basic-search-header{
+    font-family: 'effra-regular';
+    color: #484848;
+    padding-bottom: 25px;
+}
+.basic-search-selection-title{
+    font-family: 'effra-regular';
+    font-size: 14px;
+    color: #484848;
+    padding-bottom: 5px;
+}
+/* --------------------- Advanced Search Page Search Box -------------------------------------  */
+
+.advanced-search-page-search-box-layout > typeahead-container > ul{
+    border-radius: 0!important;
+}
+.advanced-search-page-search-box-layout > typeahead-container > ul > li > a{
+    font-family: 'effra-regular';
+    color: #484848;
+    background-image: none!important;
+    background-color: #fff!important;
+    border-top: 1px solid #00DEB6;
+}
+.advanced-search-page-search-box-layout > typeahead-container > ul > li > a:hover,
+.advanced-search-page-search-box-layout > typeahead-container > ul > li > a:focus,
+.advanced-search-page-search-box-layout > typeahead-container > ul > li > a:visited{
+    font-family: 'effra-regular';
+    background-image: none!important;
+    background-color: #00DEB6!important;
+    color: #FFF!important;
+}
+.advanced-search-page-search-box-header-text{
+    font-family: 'effra-medium';
+    color: #00deb6;
+    line-height: 1.5em;
+    font-size: 28px;
+}
+.advanced-search-page-search-box-small-text{
+    font-family: 'effra-regular';
+    color: #fff;
+    line-height: 1.2em;
+    font-size: 16px;
+    font-weight: normal;
+}
+.advanced-search-header{
+    font-family: 'effra-regular';
+    color: #484848;
+    padding-bottom: 25px;
+}
+.advanced-search-selection-title{
+    font-family: 'effra-regular';
+    font-size: 14px;
+    color: #484848;
+    padding-bottom: 5px;
 }
