--- a/web/resources/css/member.css
+++ b/web/resources/css/member.css
@@ -360,3 +360,105 @@ Version: 1.0
     line-height: 2em;
 }
 
+/* ---------------------------- Dashboard -------------------------------- */
+.dashboard-welcome-note{
+    font-size: 24px;
+    font-family: 'effra-regular';
+    text-align: center;
+    color: #fff;
+    border-top-left-radius: 4px; 
+    border-top-right-radius: 4px; 
+    border: 1px solid #00deb6;
+    background-color: #00deb6;
+}
+/* ---------------------------- Saved Ads -------------------------------- */
+.saved-ads-product-heading{
+    font-size: 24px;
+    font-family: 'effra-regular';
+    text-align: center;
+    color: #fff;
+    border-top-left-radius: 4px; 
+    border-top-right-radius: 4px; 
+    border: 1px solid #00deb6;
+    background-color: #00deb6;
+}
+.saved-ads-product-layout{
+    padding: 0px 25px;
+    border: 1px solid #bbb;
+    -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    border-radius: 0px;
+}
+.saved-ads-product-title{
+    font-size: 16px;
+    font-family: 'effra-regular';
+    color: #484848;
+    line-height: 1.5em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-weight: normal;
+}
+.saved-ads-product-description{
+    font-size: 13px;
+    font-family: 'effra-regular';
+    color: #484848;
+    line-height: 1.2em;
+    font-weight: normal;
+}
+.saved-ads-product-price-title,.saved-ads-product-id-title{
+    font-family: 'effra-regular';
+    color: #777;
+}
+.saved-ads-product-price-amount,.saved-ads-product-id{
+    font-family: 'effra-regular';
+    color: #222;
+    font-size: 16px;
+}
+/* ---------------------------- My Ads -------------------------------- */
+.my-ads-product-heading{
+    font-size: 24px;
+    font-family: 'effra-regular';
+    text-align: center;
+    color: #fff;
+    border-top-left-radius: 4px; 
+    border-top-right-radius: 4px; 
+    border: 1px solid #00deb6;
+    background-color: #00deb6;
+}
+.my-ads-product-layout{
+    padding: 0px 25px;
+    border: 1px solid #bbb;
+    -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    border-radius: 0px;
+}
+.my-ads-product-title{
+    font-size: 16px;
+    font-family: 'effra-regular';
+    color: #484848;
+    line-height: 1.5em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-weight: normal;
+}
+.my-ads-product-description{
+    font-size: 13px;
+    font-family: 'effra-regular';
+    color: #484848;
+    line-height: 1.2em;
+    font-weight: normal;
+}
+.my-ads-product-price-title,.my-ads-product-id-title{
+    font-family: 'effra-regular';
+    color: #777;
+}
+.my-ads-product-price-amount,.my-ads-product-id{
+    font-family: 'effra-regular';
+    color: #222;
+    font-size: 16px;
+}
+/* ---------------------------- Messages -------------------------------- */
