--- a/web/resources/css/common.css
+++ b/web/resources/css/common.css
@@ -91,6 +91,9 @@ table th {
     letter-spacing: .1em;
     text-transform: uppercase;
 }
+table tr:hover{
+    color: #484848;
+}
 @media screen and (max-width: 600px) {
     table {
         border: 0;
