member account, edit profile, individual ad bids, and manage product step 5 & 6 updated

--- a/web/resources/css/common.css
+++ b/web/resources/css/common.css
@@ -140,6 +140,9 @@ table tr:hover{
 .input-custom-field:focus{
     border: 1px solid #00deb6!important;
 }
+textarea{
+    resize: none;
+}
 .select-custom-field{
     border: 1px solid #ccc;
     border-radius: 0px;
